2-blueprints-nextgen/scripts/k8s/apps/03-httpbin/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    - uri:
        prefix: /headers
    - uri:
        prefix: /response-headers
    - uri:
        prefix: /anything
    - uri:
        prefix: /redirect-to
    - uri:
        prefix: /image
    - uri:
        prefix: /html
    route:
    - destination:
        port:
          number: 8000
        host: httpbin-svc
